# nnoe

./: .cargo-deny.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  LICENSE  README.md
.github/workflows/: build.yml  docs.yml  e2e.yml  release.yml  security.yml  test.yml
agent/: Cargo.toml  build.rs
agent/examples/: agent.toml.example
agent/proto/: cerbos.proto
agent/src/: config.rs  lib.rs  main.rs  metrics.rs
agent/src/core/: mod.rs  orchestrator.rs
agent/src/etcd/: client.rs  mod.rs
agent/src/nebula/: manager.rs  mod.rs
agent/src/plugin/: mod.rs  registry.rs  trait_def.rs
agent/src/services/: cerbos.rs  dnsdist.rs  kea.rs  knot.rs  lynis.rs  mod.rs
agent/src/sled_cache/: cache.rs  mod.rs
agent/src/util/: retry.rs
agent/tests/: cache_test.rs  etcd_test.rs  integration_test.rs  services_test.rs
deployments/ansible/: README.md
deployments/ansible/inventory/: example.yml
deployments/ansible/playbooks/: deploy.yml
deployments/ansible/roles/agent/handlers/: main.yml
deployments/ansible/roles/agent/tasks/: main.yml
deployments/ansible/roles/agent/templates/: agent.toml.j2  nnoe-agent.service.j2
deployments/ansible/roles/common/tasks/: main.yml
deployments/ansible/roles/etcd/handlers/: main.yml
deployments/ansible/roles/etcd/tasks/: main.yml
deployments/ansible/roles/etcd/templates/: etcd.service.j2
deployments/ansible/roles/services/tasks/: main.yml
deployments/docker/: Dockerfile.agent  Dockerfile.misp-sync  Dockerfile.phpipam  README.md  docker-compose.dev.yml  docker-compose.prod.yml  haproxy-etcd.cfg
deployments/kubernetes/: README.md  kustomization.yaml  networkpolicy.yaml
deployments/kubernetes/agent/: configmap.yaml  daemonset.yaml  service.yaml  servicemonitor.yaml
deployments/kubernetes/management/: etcd-service.yaml  etcd-statefulset.yaml  namespace.yaml
deployments/kubernetes/misp-sync/: deployment.yaml  secret.yaml.example
deployments/manual/: README.md  install.sh  uninstall.sh  upgrade.sh
deployments/manual/systemd/: nnoe-agent.service
docs/: README.md  architecture.md  architecure.md  completion-status.md  intention.md  plan1.md  plan2.md  plan3.md  plan4.md  plan5.md
docs/api/: agent-api.md  etcd-schema.md  phpipam-extensions.md
docs/deployment/: ansible.md  docker.md  kubernetes.md  manual.md
docs/development/: contributing.md  getting-started.md  plugin-development.md
docs/examples/dhcp-scopes/: README.md
docs/examples/threat-integration/: README.md
docs/examples/zone-management/: README.md
docs/operations/: backup-restore.md  monitoring.md  security.md  troubleshooting.md
integrations/cerbos-policies/: README.md  dns-query-policy.yaml  network-segment-policy.yaml
integrations/kea-hooks/: CMakeLists.txt  README.md  build.sh
integrations/kea-hooks/src/: libdhcp_etcd.cpp
integrations/misp-sync/: Cargo.toml  README.md
integrations/misp-sync/src/: main.rs
integrations/phpipam-plugin/: README.md  composer.json
integrations/phpipam-plugin/etc/: nnoe-config.php.example
integrations/phpipam-plugin/src/: NNOE.php
management/etcd-orchestrator/: README.md  backup.sh  bootstrap.sh  member-manage.sh  restore.sh  validate-backup.sh
management/monitoring/: README.md
management/monitoring/grafana/alerts/: nnoe-alerts.yml
management/monitoring/grafana/dashboards/: nnoe-dashboard.json
management/monitoring/prometheus-exporter/: Cargo.toml  Dockerfile
management/monitoring/prometheus-exporter/src/: main.rs  metrics.rs
management/nebula-ca/: README.md  ca-init.sh  check-expiry.sh  distribute-certs.sh  revoke-cert.sh  rotate-cert.sh  sign-cert.sh
scripts/: build.sh  deploy.sh  generate-certs.sh  test.sh
testing/: README.md
testing/integration/e2e/: Dockerfile.test  README.md  docker-compose.yml  e2e_tests.rs
testing/integration/fixtures/: dhcp-scope-example.json  test_config.toml  threat-example.json  zone-example.json
testing/integration/scenarios/: dhcp_scope_test.rs  ha_failover_test.rs  threat_blocking_test.rs  zone_management_test.rs
testing/mocks/etcd-mock/: Cargo.toml
testing/mocks/etcd-mock/src/: lib.rs
testing/performance/benchmarks/: Cargo.toml  dns_query_benchmark.rs
testing/performance/benchmarks/benches/: dns_query_benchmark.rs
testing/performance/benchmarks/src/: lib.rs
testing/performance/scripts/: etcd_watch_latency.sh  load_test.sh
testing/unit/: cache_test.rs  config_test.rs
