[package]
name = "nnoe-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nnoe-agent"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
etcd-client.workspace = true
sled.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
ipnetwork.workspace = true
config.workspace = true
nix.workspace = true
chrono.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-native-certs.workspace = true
tonic.workspace = true
prost.workspace = true
uuid.workspace = true
bincode = "1.3"
serde_yaml.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
# Test dependencies
mockall = "0.12"
tokio-test = "0.4"

[[test]]
name = "cache_test"
path = "tests/cache_test.rs"

[[test]]
name = "etcd_test"
path = "tests/etcd_test.rs"

[[test]]
name = "services_test"
path = "tests/services_test.rs"

[lib]
name = "nnoe_agent"
path = "src/lib.rs"

