[package]
name = "nnoe-misp-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "misp-sync"
path = "src/main.rs"

[dependencies]
nnoe-agent = { path = "../../agent" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
etcd-client.workspace = true
reqwest.workspace = true
chrono.workspace = true

